# calendar-mail-sync

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
agents/: __init__.py  calendar_agent.py  discord_agent.py  parallel_coordinator_agent.py  root_coordinator_agent.py  summarizer_agent.py
agents/email_agents/: __init__.py  pers_email_reader.py  school_email_reader.py  work_email_reader.py
core/: settings.py
test/: exec_test.py  test.py  validate_settings.py
tools/: __init__.py  discord_tools.py  google_tools.py
